--- a/chanhwi3.html
+++ b/chanhwi3.html
@@ -8,7 +8,7 @@
   <style>
     /* 스타일 시트 추가 */
     body {
-      font-family: Garamond;
+      font-family: Georgia, 'Times New Roman', Times, serif;
       margin: 0;
       padding: 0;
       background-color: #f8f8f8;
